developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_virtual_key_in_context.kmn
store(&NAME) 'ERROR_VirtualKeyInContext'
store(&VERSION) '9.0'

begin Unicode > use(main)

group(main) using keys

c ERROR_VirtualKeyInContext
[K_BKQUOTE] + 'a' > 'b'
